Update template example

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-    <p>${ flask_template_var }$</p>
+    <p>Welcome to the jinja n vue example application. Your ip address is ${ flask_template_var }$</p>
   </div>
 
   <div id="app">
